# Server-Scripts

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  process_monitor.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yaml  checks.yml
ansible/: ansible.cfg  dev-requirements.txt  galaxy-requirements.yml  requirements.txt
ansible/playbooks/system/: configure-infisical-agent.yml  create-swap-file.yml  docker-prune.yml  docker-stack-update.yml  extend-sd-card-life.yml  init-docker-swarm.yml  install-backup.yml  install-docker.yml  install-grafana-agent.yml  install-grafana-alloy.yml  (+21 more)
docker-compose-app-service/: README.md
docker_compose_app_service/: README.md  docker_compose_app.service  docker_compose_app_starter.sh
mega-cmd-monitor/: README.md  mega-cmd-mon.service
process_monitor/: README.md
scripts/docker-compose-app-service/: docker_compose_app.service
scripts/docker-stack-update/: docker_stack_update.sh
scripts/docker-util/: docker_util.sh
scripts/env/: merge_env.py
scripts/reboot-notifier/: reboot_notifier.sh
scripts/ssh-login-alert/: ssh_login_alert.sh
scripts/update-notifier/: update_notifier.sh
ssh-login-alert/: ssh_login_alert.sh
terraform/cloudflare/: .terraform.lock.hcl  bot_management.tf  filter_hibare.tf  firewall_rules_hibare.tf  main.tf  r2_bucket.tf  ruleset_hibare.tf  ruleset_xyz.tf  variables.tf  zone_records_hibare.tf  zone_records_xyz.tf  zone_settings.tf  zone_settings_hibare.tf  zone_settings_xyz.tf  zones.tf
update-notifier/: update_notifier.sh
(+2 files in other folders)
